cmake_minimum_required(VERSION 3.21)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp C++/1WeekPrepKit/Day1/Mini-MaxSum/MinMaxSum.cpp C++/1WeekPrepKit/Day1/Mini-MaxSum/MinMaxSum.h C++/1WeekPrepKit/Day1/PlusMinus/PlusMinus.h C++/1WeekPrepKit/trim.cpp C++/1WeekPrepKit/trim.h C++/1WeekPrepKit/Day1/PlusMinus/PlusMinus.cpp C++/1WeekPrepKit/Day1/TimeConversion/TimaConversion.cpp C++/1WeekPrepKit/Day1/TimeConversion/TimeConversion.h C++/1WeekPrepKit/Day4/GridChallange/GridChallange.cpp C++/1WeekPrepKit/Day4/GridChallange/GridChallange.h C++/1WeekPrepKit/Day2/LonelyInteger/LonelyInteger.cpp C++/1WeekPrepKit/Day2/LonelyInteger/LonelyInteger.h C++/1WeekPrepKit/Day2/DiagonalDifference/DiagonalDifference.cpp C++/1WeekPrepKit/Day2/DiagonalDifference/DiagonalDifference.h C++/1WeekPrepKit/Day2/CountingSort1/CountingSort1.cpp C++/1WeekPrepKit/Day2/CountingSort1/CountingSort1.h)